--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .topo {
-  background-color: #0f8f3e; /* verde principal */
+  background-color: #ffffff;
   color: white;
   padding: 20px;
 }
