--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #ffffff;
+  background-image: url("fundo.png");
+  background-size: cover;        /* cobre a tela toda */
+  background-repeat: no-repeat;  /* não repete */
+  background-attachment: fixed;  /* fica fixo ao rolar */
 }
+
 
 .topo {
   background-color: #ffffff;
