--- a/style.css
+++ b/style.css
@@ -1,30 +1,24 @@
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-image: url("fundo.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Programa Sabará | Inicio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
+<body>
 
-.topo {
-  background-color: #ffffff;
-  color: white;
-  padding: 10px;
-}
+  <div class="topo">
+    <div class="logos">
+      <img src="programalogo.png" class="logo">
+      <img src="iflogo.png" class="logo">
+    </div>
+  </div>
 
-.logos {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-}
+  <!-- FAIXA VERDE -->
+  <div class="banner">
+    <h1>Meus Progressos</h1>
+  </div>
 
-.logo {
-  height: auto;
-  width: 120px;
-}
-
-.titulo {
-  margin-top: 15px;
-}
+</body>
+</html>
