--- a/style.css
+++ b/style.css
@@ -9,42 +9,39 @@ body {
 
 /* TOPO BRANCO */
 .topo {
-  background-color: #ffffff;
-  padding: 20px 40px;
+  background-color: white;
+  padding: 20px 60px;
 }
 
+/* ORGANIZA LOGOS */
 .logos {
   display: flex;
   align-items: center;
-  gap: 40px;
+  gap: 50px;
 }
 
-.logo {
-  width: 150px;
-  height: auto;
+/* LOGO PROGRAMA */
+.logo-programa {
+  height: 80px;
+  width: auto;
 }
 
-/* FAIXA VERDE */
+/* LOGO IF */
+.logo-if {
+  height: 100px;  /* controla tamanho */
+  width: auto;
+}
+
+/* BANNER VERDE */
 .banner {
-  background-image: url("verde.png"); /* CONFERE O NOME */
+  background-image: url("verde.png"); /* textura verde */
   background-size: cover;
   background-position: center;
-  height: 160px;
+
+  height: 170px;
 
   display: flex;
   align-items: center;
   justify-content: center;
 
-  border-bottom-left-radius: 60px;
-  border-bottom-right-radius: 60px;
-
-  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-}
-
-.banner h1 {
-  color: white;
-  font-size: 52px;
-  margin: 0;
-  font-weight: bold;
-  text-shadow: 2px 2px 10px rgba(0,0,0,0.4);
-}
+  border-bot
