--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .topo {
   background-color: #ffffff;
   color: white;
-  padding: 10px;
+  padding: 5px 20px;
 }
 .logos {
   display: flex;
