--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   margin-top: 15px;
 }
 .banner {
-  background-image: url("verde.png");
+  background-image: url("text11.jpng");
   background-size: cover;
   background-position: center;
   height: 150px;
