--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Fira Code', monospace;
   background-image: url("fundo.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 .topo {
   background-color: transparent;
