--- a/style2.css
+++ b/style2.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code&display=swap');
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Fira Code', monospace;
   background-image: url("fundo.png");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
 .topo {
   background-color: transparent;
@@ -43,7 +48,7 @@ body {
 .banner h1 {
   color: white;
   font-size: 48px;
-  margin: 0;
+  margin: 0;    
 }
 .botao1 a {
   text-decoration: none;
@@ -56,4 +61,36 @@ body {
   font-weight: bold;
   color: rgb(8, 102, 0);
   font-size: 20px;;
+}
+.img1 {
+    height: 250px;
+    width: auto;
+    position: absolute;
+    top: 250px;
+    left: 1400px;
+    animation: fadeIn 0.8s ease-in-out;
+}
+.img2 {
+    height: 551.4px;
+    width: auto;
+    position: absolute;
+    top: 250px;
+    right: 570px;
+    animation: fadeIn 0.8s ease-in-out;
+}
+.img3 {
+    height: 250px;
+    width: auto;
+    position: absolute;
+    top: 550px;
+    left: 1400px;
+    animation: fadeIn 0.8s ease-in-out;
+}
+.about {
+    animation: fadeIn 0.8s ease-in-out;
+    color: rgb(3, 26, 0);
+    font-family: 'Fira Code', monospace;
+    margin-top: 120px;
+    margin-left: 80px;
+    font-size: 25px;
 }
